--- a/client/index.html
+++ b/client/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Cinemaphile - Movie Review, Community Talks</title>
+    <link rel="shortcut icon" href="/images/cinema.png" type="image/x-icon" />
+    <title>Cinemaphile - Bookmarks, Discussions</title>
   </head>
   <body>
     <div id="root"></div>
